# solana-interface-token-state

./: .gitignore  README.md  package.json
interface/: Cargo.toml
interface-js/: package.json
interface/derive/: Cargo.toml
interface/derive/src/: lib.rs
interface/src/: lib.rs  metadata.rs  mint.rs
interface/syn/: Cargo.toml
interface/syn/src/: check_fields.rs  impl_trait.rs  impl_traits.rs  interface.rs  lib.rs  parser.rs  v1.rs  v2.rs
program/: Cargo.toml
program/src/: lib.rs  processor.rs
tests/: test.ts
tests/instructions/: index.ts
tests/state/: index.ts
