[package]
name = "program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.15.2"
state-interface = { path = "../interface", version = "0.1.0" }
shank = { path = "../fork-shank/shank", version = "0.0.12" }